# leonardo-store

./: .gitignore  MANIFEST.in  README.rst  setup.cfg  tox.ini
address/: __init__.py  abstract_models.py  config.py  forms.py  models.py  utils.py
address/migrations/: 0002_auto_20151101_1735.py
brand/: __init__.py  admin.py  settings.py  views.py
brand/dashboard/: forms.py  views.py
brand/migrations/: 0001_initial.py
brand/models/: __init__.py
catalogue/: __init__.py  abstract_models.py  app.py  default_field_types.py  forms.py  models.py  utils.py
catalogue/templatetags/: custom_basket_tags.py
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
eshop_paypal/: __init__.py
eshop_stores/: __init__.py
eshop_stores/apps/: stores.py
leonardo_module_eshop/: __init__.py  urls.py
leonardo_module_eshop/apps/: accounts.py  auth.py  basket.py  brand.py  cart.py  catalog.py  checkout.py  core.py  feeds.py  manufacturer.py  registration.py  search.py  wishlist.py
leonardo_module_eshop/templates/: layout.html  layout_2_col.html
leonardo_module_eshop/widget/: __init__.py
leonardo_store/: __init__.py  admin.py  models.py  overrides.py  settings.py
leonardo_store/apps/: basket.py  branches.py  brand.py  catalog.py  catalogue.py  category.py  checkout.py  customer.py  dashboard.py  eshop.py  offer.py  partner.py  payment.py  promotions.py
leonardo_store/catalogue/: dashboard.py  forms.py  utils.py  views.py
leonardo_store/dashboard/: menu.py  urls.py  widgets.py
leonardo_store/migrations/: 0001_initial.py  0002_auto_20150718_1506.py
leonardo_store/navigation_extensions/: categories.py
leonardo_store/payments/: __init__.py  app.py  methods.py  repository.py  utils.py  views.py
leonardo_store/resources/: __init__.py  _utils.py  category.py  fields.py  order.py  partner.py  product.py  user.py
order/: __init__.py  abstract_models.py  admin.py  app.py  forms.py  models.py
requirements/: default.txt  tests.txt
tests/: local_settings.py
user/: models.py
(+390 files in other folders)
